2009-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* distances.m: fixed bug where x-values were used twice instead of x & y

2008-09-05  Jeremy Cribb <jcribb@email.unc.edu>
	* stderr.m: added.  couldn't find a stderr function, it's easy enough to make one, and makes the code (and intent) easier to read.

2008-07-09  Jeremy Cribb <jcribb@email.unc.edu>
	* mavg.m: added.  simple function that computes moving averages via convolution.

2008-01-24  Jeremy Cribb <jcribb@email.unc.edu>
	* distance.m: submitting Lauren Hartle's new algorithm for this function.  vectorized and much faster.

2006-08-28  Jeremy Cribb <jcribb@email.unc.edu>
	* uncertainty_in_linefit.m: added.  reports error in slope and intercept for a linear fit.

2006-08-25	Kalpit Desai <kvdesai@email.unc.edu>
	* radialpos.m: Added. A function heavily used by Laser Tracking Analysis GUI to compute radial distances (in plane as well as in 3D) from position coordinates.

2006-07-18  Jeremy Cribb <jcribb@email.unc.edu>
	* uncertainty_in_slope.m: added check for data of reasonable length for error determination and implemented messaging.

2005-10-31  Jeremy Cribb <jcribb@email.unc.edu>
	* windiff.m: minor changes to make code more readable.

2005-10-07  Jeremy Cribb <jcribb@email.unc.edu>
	* distances.m: added.  simply computes the distance between two points in three dimensions (rectangular coordinate system).

2005-07-27  Jeremy Cribb <jcribb@email.unc.edu>
	* uncertainty in slope.m: added.  returns the uncertainty in the slope of a linear fit.

2005-06-16  Jeremy Cribb <jcribb@email.unc.edu>
	* windiff.m: the dependent variable can now have more than one column (e.g. x & y coordinates) 

2005-05-21  Jeremy Cribb <jcribb@email.unc.edu>
	* phase.m: added new documentation and used quadrant-aware atan function.

2005-01-20  Jeremy Cribb <jcribb@email.unc.edu>
	* randwalk.m: added magnitude to the randomizer.  Some returned clock values were returning identical seed values to the random number generator.  bad.